--- a/frontend/packages/ux-editor/src/containers/EditContainer.module.css
+++ b/frontend/packages/ux-editor/src/containers/EditContainer.module.css
@@ -1,76 +1,49 @@
-.wrapper {
-  align-items: stretch;
+.fieldset > div {
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+
+.editModeWrapper {
   display: flex;
   margin-left: var(--margin-left-with-handle);
   margin-right: var(--margin-right-with-buttons);
 }
 
-.formComponentWithHandle {
-  align-items: stretch;
-  border-bottom-left-radius: 5px;
-  border-top-left-radius: 5px;
+.editModeSectionWithHandle {
   display: flex;
   flex-direction: row;
+  align-items: stretch;
   flex: 1;
+  border-top-left-radius: var(--drag-handle-border-radius);
+  border-bottom-left-radius: var(--drag-handle-border-radius);
 }
 
-.previewMode .formComponentWithHandle {
-  border: 1px dashed transparent;
-}
-
-.previewMode:hover .formComponentWithHandle {
-  border-color: #008FD6;
-  box-shadow: 0 0 4px #1EADF740;
-  border-radius: 5px;
-}
-
-.dragHandle {
+.editModeHandle {
   background-color: #00000010;
-  border-bottom-left-radius: 5px;
-  border-top-left-radius: 5px;
+  border-bottom-left-radius: var(--drag-handle-border-radius);
+  border-top-left-radius: var(--drag-handle-border-radius);
   visibility: hidden;
-  width: var(--drag-handle-width);
 }
 
-.previewMode .dragHandle {
-  --drag-handle-border-left-width: 6px;
-  --drag-handle-inner-width: calc(var(--drag-handle-width) - var(--drag-handle-border-left-width));
-  border-left: var(--drag-handle-border-left-width) solid #008FD6;
-  box-sizing: border-box;
-}
-
-.wrapper:hover .dragHandle {
+.editModeWrapper:hover .editModeSectionWithHandle > .editModeHandle {
   visibility: visible;
 }
 
-.formComponentWithHandle:has(.dragHandle:hover) {
+.editModeSectionWithHandle:has(.editModeHandle:hover) {
   box-shadow: 0 0 0.4rem rgba(0, 0, 0, 0.25);
 }
 
-.formComponent {
+.editModeSection {
   background-color: #fff;
   border: 1px solid #6a6a6a;
-  color: #022F51;
+  padding: 2.4rem;
   flex: 1;
-  padding: 1rem;
 }
 
-.previewMode .formComponent {
-  border: 0;
-}
-
-.buttons {
+.editModeButtons {
   display: flex;
   flex-direction: column;
   margin-left: var(--buttons-distance);
   gap: var(--buttons-distance);
-}
-
-.wrapper:not(.editMode):not(:hover) .buttons button {
-  visibility: hidden;
-}
-
-.formComponentTitle {
-  margin-top: 0.6rem;
-  color: #022F51;
 }
