--- a/frontend/resourceadm/components/ExpandableCard/ExpandableCard.module.css
+++ b/frontend/resourceadm/components/ExpandableCard/ExpandableCard.module.css
@@ -1,5 +1,4 @@
 .wrapper {
-  background-color: #D9D9D9;
   border-radius: 12px;
   padding: 24px;
   border: solid 1px #D9D9D9;
@@ -18,8 +17,10 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 .bottomWrapper {
-  border: solid red;
+  margin-top: 30px;
 }
