--- a/frontend/resourceadm/pages/PolicyEditor/PolicyEditor.module.css
+++ b/frontend/resourceadm/pages/PolicyEditor/PolicyEditor.module.css
@@ -7,26 +7,32 @@
   padding-top: 20px;
   padding-bottom: 50px;
 }
+
 .policyEditorContainer {
   width: 595px;
   min-width: 595px;
 }
+
 .policyEditorTop {
   width: 450px;
   margin-bottom: 50px;
 }
+
 .space {
   margin-block: 20px;
 }
+
 .policyEditorHeader {
   margin-bottom: 40px;
   font-weight: 400;
 }
+
 .subHeader {
   font-weight: 500;
   margin-bottom: 5px;
   margin-top: 20px;
 }
+
 /* TODO - Fix hover, tab-focus, active, visisted. */
 .externalLink {
   color: #000000;
@@ -34,6 +40,10 @@
   text-underline-offset: 4px;
   text-decoration-color: #1EAEF7;
   text-decoration-thickness: 1.5px;
+}
+
+.selectWrapper {
+margin-top: 10px;
 }
 
 p {
