--- a/frontend/resourceadm/components/ExpandablePolicyElement/ExpandablePolicyElement.module.css
+++ b/frontend/resourceadm/components/ExpandablePolicyElement/ExpandablePolicyElement.module.css
@@ -1,7 +1,15 @@
-.wrapper {
+.cardWrapper {
   border-radius: 12px;
   padding: 20px;
   border: solid 1px #D9D9D9;
+}
+
+.elementWrapper {
+  border: solid 1px #D9D9D9;
+  padding-inline: 20px;
+  padding-block: 10px;
+  border-radius: 5px;
+  background-color: #F4F4F4;
 }
 
 .title {
@@ -18,9 +26,14 @@
   align-items: center;
   width: 100%;
   padding: 0;
+  padding-right: 5px;
   margin: 0;
 }
 
-.bottomWrapper {
+.cardBottomWrapper {
   margin-top: 30px;
+}
+
+.elementBottomWrapper {
+  margin-top: 10px;
 }
