--- a/frontend/resourceadm/components/ExpandablePolicyElement/ExpandablePolicyElement.module.css
+++ b/frontend/resourceadm/components/ExpandablePolicyElement/ExpandablePolicyElement.module.css
@@ -1,13 +1,10 @@
 .cardWrapper {
   border-radius: 12px;
-  padding: 20px;
   border: solid 1px #D9D9D9;
 }
 
 .elementWrapper {
   border: solid 1px #D9D9D9;
-  padding-inline: 20px;
-  padding-block: 10px;
   border-radius: 5px;
   background-color: #F4F4F4;
 }
@@ -17,7 +14,14 @@
   font-size: 16px;
 }
 
-.expandButton{
+.topWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 15px;
+}
+
+.cardExpandButton{
   border: none;
   background-color: transparent;
   cursor: pointer;
@@ -25,15 +29,31 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding: 0;
+  padding: 20px;
+  padding-right: 5px;
+  margin: 0;
+}
+
+.elementExpandButton{
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding-block: 10px;
+  padding-left: 20px;
   padding-right: 5px;
   margin: 0;
 }
 
 .cardBottomWrapper {
-  margin-top: 30px;
+  padding-inline: 20px;
+  padding-bottom: 20px;
 }
 
 .elementBottomWrapper {
-  margin-top: 10px;
+  padding-inline: 20px;
+  padding-bottom: 10px;
 }
