--- a/backend/src/Designer/Views/AppDevelopment/index.cshtml
+++ b/backend/src/Designer/Views/AppDevelopment/index.cshtml
@@ -12,5 +12,10 @@
 
 <div id="root" class="media-body flex-column d-flex"></div>
 
-<link  href="/designer/frontend/app-development/app-development.css" asp-append-version="true" rel="stylesheet">
-<script src="/designer/frontend/app-development/app-development.js" asp-append-version="true" type="text/javascript"></script>
+<environment include="Production">
+    <link  href="https://altinn-cdn.no/studio/designer/frontend/stable/designer/frontend/app-development/app-development.css" asp-append-version="true" rel="stylesheet">
+    <script src="https://altinn-cdn.no/studio/designer/frontend/stable/designer/frontend/app-development/app-development.js" asp-append-version="true" type="text/javascript"></script>
+</environment>
+<environment exclude="Production">
+    <link href="https://altinn-cdn.no/studio/designer/frontend/latest/app-development/app-development.css" rel="stylesheet" />
+    <script src="https://altinn-cdn.no/studio/designer/frontend/latest/app-development/app-development.js" type="text/javascript"></script>
